--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script src="%PUBLIC_URL%/prism/prism.js"></script>
-<% if (process.env.NODE_ENV === 'production') { %>
+<% if (process.env.NODE_ENV === 'prod') { %>
     <script defer data-domain="checklistbank.org" src="https://plausible.io/js/script.js"></script>
 <% } %>
   </body>
