--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>ChecklistBank</title>
+    <meta name="NODE_ENV" content="<%= process.env.NODE_ENV %>">
     <!-- REPLACE_WITH_SEO -->
   </head>
   <body>
@@ -41,7 +42,7 @@
       The build step will place the bundled scripts into the <body> tag.
 
       To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
+      To create a production bundle, use `npm run build` or `yarn build`.      
     -->
     <script src="%PUBLIC_URL%/prism/prism.js"></script>
 <% if (process.env.NODE_ENV === 'prod') { %>
